finished the basics for the dashboard. Almost done with the signup page. Will do login page next

--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,42 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+html, body, #root {
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+nav { 
+  font-family: 'Sora', sans-serif;
+  font-weight: 600;
+}
+
+.signup-page {
+  height: 100%;
+  background-image: url("https://st2.depositphotos.com/1068875/7956/i/450/depositphotos_79565488-stock-photo-distant-mountain-range-and-thin.jpg");
+  background-size: cover;
+}
+
+.signup-box {
+  text-align: center;
+  width: 800px;
+  height: 600px;
+  border-radius: 5%;
+  z-index: 2;
+  position: absolute;
+  top: 25%;
+  left: 33%;
+  margin-top: -50px;
+  margin-left: -50px;
+  background-color: rgb(224, 224, 224);
+  background: radial-gradient(#fdfdfd, #a5a5a7);
 }
 
 .card {
@@ -28,3 +59,4 @@ code {
   height: 400px;
   object-fit: cover;
 }
+
