--- a/src/index.css
+++ b/src/index.css
@@ -22,13 +22,13 @@ nav {
   font-weight: 600;
 }
 
-.signup-page {
+.signup-page, .login-page {
   height: 100%;
   background-image: url("https://st2.depositphotos.com/1068875/7956/i/450/depositphotos_79565488-stock-photo-distant-mountain-range-and-thin.jpg");
   background-size: cover;
 }
 
-.signup-box {
+.signup-box, .login-box {
   text-align: center;
   width: 800px;
   height: 600px;
@@ -40,7 +40,7 @@ nav {
   margin-top: -50px;
   margin-left: -50px;
   background-color: rgb(224, 224, 224);
-  background: radial-gradient(#fdfdfd, #a5a5a7);
+
 }
 
 .card {
@@ -60,3 +60,6 @@ nav {
   object-fit: cover;
 }
 
+.shadow {
+  box-shadow: inset 0 0 50px #000000;
+}
