finished layout of the cart, just need to add checkout button

--- a/src/index.css
+++ b/src/index.css
@@ -90,13 +90,12 @@ nav {
 }
 
 .cart-img {
-  height: 400px;
+  height: 200px;
+  object-fit: scale-down;
 }
 
 .cart-card {
   width: 800px
 }
 
-.total-card {
-  height: 800px;
-}
+
