--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ nav {
 .signup-page, .login-page {
   height: 100%;
   background-image: url("https://st2.depositphotos.com/1068875/7956/i/450/depositphotos_79565488-stock-photo-distant-mountain-range-and-thin.jpg");
+  background-attachment: fixed;
   background-size: cover;
 }
 
@@ -63,6 +64,22 @@ nav {
 .shadow {
   box-shadow: inset 0 0 50px #000000;
 }
+
+/******* Quiz Styling *******/
+
+
+.quiz-page {
+  background: url("https://m.media-amazon.com/images/I/61i9D4-83ZL.jpg") no-repeat center center fixed;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.quiz-title {
+  margin-top: 80px;
+  margin-bottom: 50px;
+  border-radius: 25px;
+}
+
 
 /******* Clothing Dashboard Styling *******/
 
