made some updates to the routes on app.js, and updated the css for the title of each card so that it looks uniform

--- a/src/index.css
+++ b/src/index.css
@@ -83,8 +83,16 @@ nav {
 
 /******* Clothing Dashboard Styling *******/
 
+.dash-page {
+  padding-bottom: 100px;
+}
+
 .card {
   width: 350px;
+}
+
+.card-title {
+  height: 2.5em;
 }
 
 .clothing-color {
